install new version of sqlite3 and dotenv

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^16.0.3",
     "express": "4.17.1",
     "sequelize": "^6.3.4",
-    "sqlite3": "^4.0.1"
+    "sqlite3": "^5.1.6"
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
@@ -14,7 +15,7 @@
   },
   "devDependencies": {
     "concurrently": "4.1.0",
-    "nodemon": "1.19.1"
+    "nodemon": "^1.19.1"
   },
   "engines": {
     "node": ">=10.16.3"
