--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "body-parser": "^1.19.0",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
+    "jest": "^29.5.0",
     "sequelize": "^6.3.4",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3"
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "test": "DB_PATH=:memory: jest --runInBand"
   },
   "devDependencies": {
     "concurrently": "4.1.0",
@@ -19,6 +22,14 @@
   },
   "engines": {
     "node": ">=10.16.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.test\\.js$",
+    "testEnvironment": "node"
   },
   "engineStrict": true
 }
