--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "jest": "^29.5.0",
     "sequelize": "^6.3.4",
     "sqlite3": "^5.1.6",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
